WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180441
WebAssembly: don't eagerly checksum
https://bugs.webkit.org/show_bug.cgi?id=180441
Summary
WebAssembly: don't eagerly checksum
JF Bastien
Reported
2017-12-05 13:32:06 PST
It looks like it may have caused a regression, but I can't repro it. For now just don't checksum, and we can revisit later when I have time. Let's see what perf bots say.
Attachments
patch
(10.51 KB, patch)
2017-12-05 13:37 PST
,
JF Bastien
saam
: review+
Details
Formatted Diff
Diff
patch
(10.50 KB, patch)
2017-12-05 14:17 PST
,
JF Bastien
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
JF Bastien
Comment 1
2017-12-05 13:32:27 PST
<
rdar://problem/35156628
>
JF Bastien
Comment 2
2017-12-05 13:37:58 PST
Created
attachment 328494
[details]
patch
EWS Watchlist
Comment 3
2017-12-05 13:40:10 PST
Attachment 328494
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/wasm/WasmNameSection.h:41: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WasmNameSection.h:42: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WasmNameSection.h:48: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 4
2017-12-05 13:42:00 PST
Comment on
attachment 328494
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=328494&action=review
r=me
> Source/JavaScriptCore/runtime/Options.h:481 > + v(bool, eagerlyHashWebAssemblyModules, false, Normal, "Unnamed WebAssembly modules are identified in backtraces through their hash, if available.") \
nit: I'd name this starting with "use" to be consistent with many of our other options. Maybe: useEagerWebAssemblyModuleHashing?
JF Bastien
Comment 5
2017-12-05 14:17:40 PST
Created
attachment 328498
[details]
patch Address comments.
WebKit Commit Bot
Comment 6
2017-12-05 14:50:35 PST
Comment on
attachment 328498
[details]
patch Clearing flags on attachment: 328498 Committed
r225550
: <
https://trac.webkit.org/changeset/225550
>
WebKit Commit Bot
Comment 7
2017-12-05 14:50:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug