WebAssembly: don't eagerly checksum https://bugs.webkit.org/show_bug.cgi?id=180441 <rdar://problem/35156628>

Reviewed by Saam Barati.

JSTests:

Checksum is now disabled, so tests only have <?> as the module
name.

* wasm/function-tests/nameSection.js:
* wasm/function-tests/stack-overflow.js:
(import.Builder.from.string_appeared_here.import.as.assert.from.string_appeared_here.assertOverflows):
(assertOverflows.assertThrows):
(assertOverflows):
* wasm/function-tests/stack-trace.js:

Source/JavaScriptCore:

Make checksumming of module optional for now. The bots think the
checksum hurt compile-time. I'd measured it and couldn't see a
difference, and still can't at this point in time, but we'll see
if disabling it fixes the bots. If so then I can make it lazy upon
first backtrace construction, or I can try out MD5 instead of
SHA1.

* runtime/Options.h:
* wasm/WasmModuleInformation.cpp:
(JSC::Wasm::ModuleInformation::ModuleInformation):
* wasm/WasmModuleInformation.h:
* wasm/WasmNameSection.h:
(JSC::Wasm::NameSection::NameSection):


Canonical link: https://commits.webkit.org/196379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225550 268f45cc-cd09-0410-ab3c-d52691b4dbfc