Source/JavaScriptCore/wasm/WasmModuleInformation.h
@@ -29,6 +29,8 @@
 
 #include "WasmFormat.h"
 
+#include <wtf/Optional.h>
+
 namespace JSC { namespace Wasm {
 
 struct ModuleInformation : public ThreadSafeRefCounted<ModuleInformation> {
@@ -57,7 +59,7 @@ struct ModuleInformation : public ThreadSafeRefCounted<ModuleInformation> {
     uint32_t internalFunctionCount() const { return internalFunctionSignatureIndices.size(); }
 
     const Vector<uint8_t> source;
-    const CString hash;
+    const std::optional<CString> hash;
 
     Vector<Import> imports;
     Vector<SignatureIndex> importFunctionSignatureIndices;
